Use ArrayList for efficiency